--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Adam Nemecek <adamnemecek@gmail.com>"]
 edition = "2018"
 
-keywords = ["packing", "bin packing"]
+keywords = ["packing", "bin-packing"]
 description = "Rust port of the potpack algorithm"
 license = "MIT"
 repository = "https://github.com/adamnemecek/potpack.git"
